syntax = "proto3";

package rivet.backend.pkg.team.msg.member_remove;

import "resources/legacy/proto/common.proto";

/// name = "msg-team-member-remove"
/// parameters = [
/// 	{ name = "team_id" },
/// 	{ name = "user_id" },
/// ]
message Message {
	rivet.common.Uuid team_id = 1;
	rivet.common.Uuid user_id = 2;
	bool silent = 3;
}

